# Bookar

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  cloudflare  continue  deploy.sh  docker-compose.prod.yml  docker-compose.yml  nginx.conf  prevvpsconf  prod.env  security_audit_report.md.resolved  security_checklist.md.resolved  tasks  tasks.save
IA/: agent.py  (+4 more)
backend/: Dockerfile  Dockerfile.prod  dump.rdb  entrypoint.sh  populate_uuids.py  pyproject.toml  requirements.txt  test_quiz_flow.py
backend/accounts/: admin.py  controllers.py  models.py  schemas.py  services.py  subscription_service.py  tasks.py  throttling.py
backend/accounts/migrations/: 0001_initial.py  0002_user_avatar_user_bio.py  0003_alter_user_email_alter_user_username.py  0004_emailverificationcode.py  0005_waitlist.py  0007_remove_emailverificationcode_created_at_and_more.py  0009_alter_emailverificationcode_email.py  0012_subscriptionhistory.py
backend/accounts/payment/: __init__.py  base.py  kambafy.py  manual.py  stripe.py
backend/apps/accounts/: consumers.py  controllers.py  models.py  schemas.py  services.py  tasks.py  tests.py  throttling.py
backend/apps/courses/: controllers.py  models.py  providers.py  schemas.py  services.py  tasks.py  utils.py
backend/apps/explicador/: __init__.py  apps.py  consumers.py  controllers.py  models.py  schemas.py  services.py
backend/apps/feedback/: controllers.py  models.py  services.py
backend/apps/folhas/: __init__.py  apps.py  controllers.py  models.py  schemas.py  services.py
backend/apps/mind_maps/: __init__.py  apps.py  controllers.py  models.py  schemas.py  services.py  tasks.py  tests.py
backend/apps/notifications/: controllers.py  models.py  schemas.py  services.py
backend/apps/subscriptions/: admin.py  controllers.py  models.py  notification_service.py  schemas.py  services.py  tasks.py
backend/core/: api.py  asgi.py  celery.py  consumers.py  errors.py  mail.py  middlewares.py  routing.py  security.py  settings.py  test_settings.py  urls.py  utils.py
backend/core/settings/: base.py  tests.py
backend/courses/: api.py  controllers.py  exceptions.py  models.py  providers.py  schemas.py  services.py  sse.py  tasks.py  utils.py
backend/courses/migrations/: 0001_initial.py  0001_squashed_0004_remove_course_duration_course_failed_course_uuid.py  0002_course_status_course_user_lesson_status.py  0002_lesson_delivered.py  0002_rename_video_lesson_rename_videos_module_lesson.py  0003_coursegenerationcontext.py  0003_remove_course_tag_delete_tag.py  0003_rename_file_lesson_video_file_remove_module_lesson_and_more.py  0004_course_slug.py  0004_question_remove_course_failed_alter_course_status_and_more.py  0004_remove_course_duration_course_failed_course_uuid.py  0005_lesson_duration_seconds.py  0005_remove_course_level.py  0005_remove_lesson_delivered.py  0006_alter_course_thumb_alter_lesson_video_file.py  0006_alter_course_thumb_alter_module_name.py  0006_course_level.py  0007_lesson_delivered.py  0007_remove_course_id_alter_course_uuid.py  0008_course_deleted.py  0009_question_type_quiz_module.py  0010_course_max_modules.py  0011_remove_course_max_modules_remove_question_type_and_more.py  0012_course_max_modules.py  0013_quiz_module.py  0014_module_status.py  0015_course_certificate_file_course_certificate_status.py  0021_remove_course_user.py  0023_course_uuid_lesson_short_id_module_uuid.py  0024_alter_course_uuid_alter_lesson_short_id_and_more.py  0026_choice_uuid_question_uuid.py  0027_course_owner.py  0028_add_module_material.py  0029_modulematerial_content.py  0031_alter_choice_is_correct_alter_course_level_and_more.py  0033_remove_course_idx_course_featured_alter_course_level_and_more.py  0034_remove_course_idx_course_title_alter_course_status_and_more.py
backend/explicador/: apps.py  consumers.py  controllers.py  models.py  presence.py  schemas.py  services.py
backend/explicador/migrations/: 0002_alter_explicadorroom_is_active_and_more.py
backend/feedback/: controllers.py  schemas.py
backend/feedback/migrations/: 0001_initial.py
backend/folhas/: apps.py  controllers.py  models.py  schemas.py  services.py
backend/folhas/migrations/: 0001_initial.py
backend/mind_maps/: apps.py  controllers.py  models.py  schemas.py  services.py  tasks.py  tests.py
backend/mind_maps/migrations/: 0004_mindmap_is_shared.py  (+1 more)
backend/scripts/: check_google_apis.py  oauth.py
backend/utils/: auth.py  db.py  mail.py  middlewares.py  tests.py  websocket.py
(+221 files in other folders)
