[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "angelo-francisco",email = "ics20080729@gmail.com "}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=0.3.27,<0.4.0)",
    "django (>=5.2.7,<6.0.0)",
    "django-ninja (>=1.4.3,<2.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "daphne (>=4.2.1,<5.0.0)",
    "channels[redis] (>=4.3.1,<5.0.0)",
    "moviepy (>=2.2.1,<3.0.0)",
    "ollama (>=0.6.0,<0.7.0)",
    "google-genai (>=1.49.0,<2.0.0)",
    "replicate (>=1.0.7,<2.0.0)",
    "gradio-client (>=1.13.3,<2.0.0)",
    "pyttsx3 (>=2.99,<3.0)",
    "django-stubs (>=5.2.7,<6.0.0)",
    "redis (>=7.0.1,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
