[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "asgiref==3.9.2",
    "attrs==25.4.0",
    "autobahn==25.10.2",
    "automat==25.4.16",
    "cachetools==6.2.2",
    "celery>=5.5.3",
    "certifi==2025.8.3",
    "cffi==2.0.0",
    "channels==4.3.1",
    "charset-normalizer==3.4.3",
    "click==8.3.1",
    "constantly==23.10.4",
    "cryptography==46.0.3",
    "daphne==4.2.1",
    "decorator==5.2.1",
    "django==5.2.7",
    "django-cors-headers==4.9.0",
    "django-environ==0.12.0",
    "django-ninja==1.4.3",
    "django-ninja-extra>=0.30.1",
    "django-ninja-jwt>=5.4.0",
    "django-stubs==5.2.7",
    "django-stubs-ext==5.2.7",
    "elevenlabs==2.24.0",
    "filelock==3.20.0",
    "flower>=2.0.1",
    "fsspec==2025.10.0",
    "google-auth==2.43.0",
    "google-genai==1.52.0",
    "gradio-client==1.14.0",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.1.5",
    "hyperlink==21.0.0",
    "idna==3.10",
    "imageio==2.37.2",
    "imageio-ffmpeg==0.6.0",
    "incremental==24.7.2",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain==0.3.27",
    "langchain-core==0.3.78",
    "langchain-text-splitters==0.3.11",
    "langsmith==0.4.32",
    "moviepy==2.2.1",
    "numpy==2.3.5",
    "ollama==0.6.1",
    "orjson==3.11.3",
    "packaging==25.0",
    "pillow==11.3.0",
    "proglog==0.1.12",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.23",
    "pydantic[email]==2.11.10",
    "pydantic-core==2.33.2",
    "pyopenssl==25.3.0",
    "python-dotenv==1.2.1",
    "pyttsx3==2.99",
    "pyyaml==6.0.3",
    "redis==7.1.0",
    "replicate==1.0.7",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rsa==4.9.1",
    "service-identity==24.2.0",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.43",
    "sqlparse==0.5.3",
    "tenacity==9.1.2",
    "tqdm==4.67.1",
    "twisted==25.5.0",
    "txaio==25.9.2",
    "typer-slim==0.20.0",
    "types-pyyaml==6.0.12.20250915",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.5.0",
    "websockets==15.0.1",
    "zope-interface==8.0.1",
    "zstandard==0.25.0",
    "psycopg2-binary>=2.9.11",
    "email-validator>=2.3.0",
]
