[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==5.2.7",
    "django-cors-headers==4.9.0",
    "django-environ==0.12.0",
    "django-ninja==1.4.3",
    "django-ninja-extra>=0.30.1",
    "django-ninja-jwt>=5.4.0",
    "celery>=5.5.3",
    "redis==7.1.0",
    "google-genai==1.52.0",
    "ollama==0.6.1",
    "pillow==11.3.0",
    "reportlab>=4.4.10",
    "httpx==0.28.1",
    "orjson==3.11.3",
    "pydantic[email]==2.11.10",
    "cloudinary>=1.44.1",
    "django-cloudinary-storage>=0.3.0",
    "psycopg2-binary>=2.9.11",
    "uvicorn[standard]>=0.41.0",
    "gunicorn>=25.1.0",
    "python-dotenv==1.2.1",
    "flower[celery]>=2.0.1",
    "google-auth==2.43.0",
    "tenacity==9.1.2",
    "channels>=4.3.2",
    "daphne>=4.1.2",
    "xhtml2pdf>=0.2.17",
    "django-xhtml2pdf>=0.0.4",
    "shortuuid>=1.0.13",
    "channels-redis>=4.2.1",
    "replicate>=1.0.7"
    "elevenlabs>=2.46.0",
]
